--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Greek gods</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Bellybutton Biodiversity</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-<body>
-    <div id="plot"></div>
-    <script src="data.js"></script>
-    <script src="plots.js"></script>
+
+<body style = "background-color: lightgray;">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 jumbotron text-center" style = "background-color: gray">
+        <h1 style = "color: whitesmoke">Belly Button Biodiversity Dashboard</h1>
+        <img src = "https://lmg-labmanager.s3.amazonaws.com/assets/articleNo/26956/aImg/49424/ancient-permafrost-bacteria-can-be-resistant-to-modern-antibiotics-l.jpg" width = 400>
+        <p style = "color: whitesmoke">Use the interactive charts below to explore the dataset</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="well">
+          <h5>Test Subject ID No.:</h5>
+          <!-- <select id="selDataset"></select> -->
+          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+        </div>
+        <div class="panel panel-primary" height = "500px">
+          <div class="panel-heading">
+            <h3 class="panel-title">Demographic Info</h3>
+          </div>
+          <div id="sample-metadata" class="panel-body"></div>
+        </div>
+      </div>
+      <div class="col-md-5 bar-graph text-center">
+        <div id="bar"></div>
+        <h4>This list show the top 10 bacteria cultures found on the test subject.</h4>
+      </div>
+      <div class="col-md-5 text-center">
+        <div id="gauge"></div>
+        <h4>This gauge shows how much the test subject washes their belly button on a weekly basis.</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div id="bubble"></div>
+        <h4>This bubble chart shows the type and amount of bacteria culture found on a test subject.</h4>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="charts.js"></script>
+
 </body>
+
 </html>
